--- a/app/TaskLoco/Base.lproj/Main.storyboard
+++ b/app/TaskLoco/Base.lproj/Main.storyboard
@@ -1612,10 +1612,10 @@
                             <constraint firstAttribute="trailing" secondItem="Oh6-ko-qZY" secondAttribute="trailing" constant="16" id="OHb-Di-X5s"/>
                             <constraint firstItem="yWy-oF-VpG" firstAttribute="leading" secondItem="8rq-5X-dAN" secondAttribute="leading" constant="64" id="TfL-Gy-YC7"/>
                             <constraint firstItem="8rq-5X-dAN" firstAttribute="trailing" secondItem="yWy-oF-VpG" secondAttribute="trailing" constant="64" id="ZHP-T0-x9G"/>
+                            <constraint firstItem="yWy-oF-VpG" firstAttribute="top" secondItem="Oh6-ko-qZY" secondAttribute="bottom" constant="16" id="ZjY-bY-ba3"/>
                             <constraint firstItem="Oh6-ko-qZY" firstAttribute="top" secondItem="fpY-yv-XVR" secondAttribute="bottom" constant="16" id="ahd-QR-yaI"/>
                             <constraint firstItem="8rq-5X-dAN" firstAttribute="trailing" secondItem="qI5-1X-W6U" secondAttribute="trailing" id="bBZ-3m-Qgc"/>
                             <constraint firstItem="fpY-yv-XVR" firstAttribute="leading" secondItem="8rq-5X-dAN" secondAttribute="leading" id="ecb-Xh-Vhh"/>
-                            <constraint firstItem="yWy-oF-VpG" firstAttribute="top" secondItem="Oh6-ko-qZY" secondAttribute="bottom" constant="16" id="iUe-Rh-l8R"/>
                             <constraint firstItem="yyA-u2-N8P" firstAttribute="top" secondItem="qI5-1X-W6U" secondAttribute="bottom" constant="12" id="o7M-FZ-0TX"/>
                             <constraint firstItem="qI5-1X-W6U" firstAttribute="top" secondItem="8rq-5X-dAN" secondAttribute="top" id="oIK-yC-6kZ"/>
                             <constraint firstItem="yyA-u2-N8P" firstAttribute="leading" secondItem="8rq-5X-dAN" secondAttribute="leading" id="yG7-qD-PeI"/>
